--- a/rel/overlay/etc/default.ini
+++ b/rel/overlay/etc/default.ini
@@ -319,9 +319,9 @@ authentication_db = _users
 [csp]
 ;utils_enable = true
 ;utils_header_value = default-src 'self'; img-src 'self'; font-src *; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline';
-;attachments_enable = true
+;attachments_enable = false
 ;attachments_header_value = sandbox
-;showlist_enable = true
+;showlist_enable = false
 ;showlist_header_value = sandbox
 
 [cors]
