--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.o
-*.asc
 *.sha256
 *.sha512
 *.snap
@@ -7,15 +6,13 @@
 *.pyc
 *.swp
 *.pdb
-*.obj
-*.dll
-*.lib
-*.exp
 *~
 .venv
 .DS_Store
 .vscode
 .rebar/
+.rebar3/
+.erlfdb/
 .eunit/
 cover/
 core
@@ -23,29 +20,29 @@ debian/
 log
 apache-couchdb-*/
 bin/
-/config.erl
+config.erl
 *.tar.gz
 *.tar.bz2
 dev/*.beam
 dev/devnode.*
 dev/lib/
 dev/logs/
-dev/erlserver.pem
-dev/couch_ssl_dist.conf
 ebin/
 erl_crash.dump
 erln8.config
 install.mk
+rebar.config
 rel/*.config
 rel/couchdb
 rel/dev*
 rel/tmpdata
 share/server/main-coffee.js
 share/server/main.js
-share/server/main-ast-bypass.js
 share/www
+src/b64url/
 src/bear/
 src/certifi/
+src/config/
 src/couch/priv/couch_js/**/config.h
 src/couch/priv/couchjs
 src/couch/priv/couchspawnkillable
@@ -53,6 +50,10 @@ src/couch/priv/couch_ejson_compare/couch_ejson_compare.d
 src/couch/priv/couch_js/**/*.d
 src/couch/priv/icu_driver/couch_icu_driver.d
 src/mango/src/mango_cursor_text.nocompile
+src/docs/
+src/erlfdb/
+src/erlfmt/
+src/ets_lru/
 src/excoveralls/
 src/fauxton/
 src/folsom/
@@ -61,23 +62,31 @@ src/hqueue/
 src/hyper/
 src/ibrowse/
 src/idna/
+src/ioq/
+src/hqueue/
+src/jaeger_passage/
 src/jiffy/
+src/ken/
+src/khash/
+src/local/
 src/meck/
 src/metrics/
 src/mimerl/
 src/mochiweb/
 src/oauth/
 src/parse_trans/
+src/passage/
 src/proper/
 src/rebar/
+src/rebar3/
 src/recon/
+src/smoosh/
 src/snappy/
 src/ssl_verify_fun/
+src/thrift_protocol/
 src/triq/
 src/unicode_util_compat/
 src/file_system/
-src/rebar3/
-src/erlfmt/
 tmp/
 
 src/couch/*.o
@@ -130,6 +139,3 @@ test/javascript/junit.xml
 /src/httpotion/
 /src/jason/
 /src/junit_formatter/
-
-.idea
-*.lock
